@@ -2,18 +2,31 @@ package com.dougnoel.sentinel.configurations;
 
 import static org.junit.Assert.*;
 
+import com.dougnoel.sentinel.strings.SentinelStringUtils;
+import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
-import org.openqa.selenium.WebDriver;
 
-import com.dougnoel.sentinel.exceptions.YAMLFileException;
+import com.dougnoel.sentinel.exceptions.FileException;
 import com.dougnoel.sentinel.pages.PageManager;
-import com.dougnoel.sentinel.webdrivers.WebDriverFactory;
+import com.dougnoel.sentinel.system.TestManager;
+import com.dougnoel.sentinel.webdrivers.Driver;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.Duration;
 
 public class ConfigurationTests {
-	private static WebDriver driver;
+	private static final Path CONFIG_FILE_PATH = Path.of("conf/sentinel.yml");
+	private static final String TIMEOUT = "timeout";
+	private static final String LONG_PROCESS_TIMEOUT = "longProcessTimeout";
 	private static String originalEnvironment = null;
+	private static Duration orignalTimeout = Time.out();;
+	private static Duration orignalLongProcessTimeout = Time.longProcessTimeout();
+	private static final String ENV = "env";
+	private static final String PROD = "prod";
 	private static final String STAGE = "stage";
 	private static final String DEV = "dev";
 	private static final String DEFAULT = "default";
@@ -25,19 +38,31 @@ public class ConfigurationTests {
     private static final String LINUX = "linux";
     private static final String MAC = "mac";
     private static final String WINDOWS = "windows";
+    private static final String TEST_VALUE = "test_value";
 	
 	@BeforeClass
 	public static void setUpBeforeAnyTestsAreRun() {
 		originalEnvironment = Configuration.environment();
-		Configuration.environment(STAGE);
-		driver = WebDriverFactory.instantiateWebDriver();
+		Configuration.update(ENV, STAGE);
 		PageManager.setPage("MockTestPage");
+	}
+	
+	@After
+	public void tearDownAfterEachTest() {
+		PageManager.setPage("MockTestPage");
+		Configuration.update(ENV, STAGE);
 	}
 
 	@AfterClass
-	public static void tearDownAfterAllTestsAreFinished() throws Exception {
-		Configuration.environment(originalEnvironment);
-		driver.close();
+	public static void tearDownAfterAllTestsAreFinished() throws IOException {
+		Configuration.update(ENV, originalEnvironment);
+		Driver.quitAllDrivers();
+		Files.deleteIfExists(CONFIG_FILE_PATH);
+		Time.reset();
+		System.setProperty(TIMEOUT, Long.toString(orignalTimeout.getSeconds()));
+		Configuration.update(TIMEOUT, orignalTimeout.getSeconds());
+		System.setProperty(LONG_PROCESS_TIMEOUT, Long.toString(orignalLongProcessTimeout.getSeconds()));
+		Configuration.update(LONG_PROCESS_TIMEOUT, orignalLongProcessTimeout.getSeconds());
 	}
 
 	@Test
@@ -60,14 +85,20 @@ public class ConfigurationTests {
 		assertEquals("Expecting the Stage env StageUser password", "BadPassw0rd", Configuration.accountInformation(STAGEUSER, PASSWORD));
 	}
 
-	@Test(expected = YAMLFileException.class)
+	@Test(expected = FileException.class)
 	public void failToLoadNonExistentUsername() {
 		Configuration.accountInformation(DOESNOTEXIST, USERNAME);
 	}
 
-	@Test(expected = YAMLFileException.class)
+	@Test(expected = FileException.class)
 	public void failToLoadNonExistentPassword() {
 		Configuration.accountInformation(DOESNOTEXIST, PASSWORD);
+	}
+
+	@Test
+	public void getEnvironmentDefault() {
+		Configuration.clear(ENV);
+		assertEquals("Expecting the default env to be set if none is given.", "localhost", Configuration.environment());
 	}
 	
 	@Test
@@ -82,34 +113,45 @@ public class ConfigurationTests {
 	
 	@Test
 	public void loadValueForNonExistentEnvironment() {
-		System.setProperty("env", DEV);
+		Configuration.update(ENV, DEV);
 		assertEquals("Expecting the default env RegularUser password", "test", Configuration.accountInformation(REGULARUSER, PASSWORD));
 	}
 	
-	@Test(expected = YAMLFileException.class)
+	@Test(expected = FileException.class)
 	public void failToLoadNonExistentUsernameAndNonExistentEnvironment() {
-		System.setProperty("env", DEV);
+		Configuration.update(ENV, DEV);
 		Configuration.accountInformation(DOESNOTEXIST, USERNAME);
 	}	
 	
 	@Test
 	public void loadStageUrlUsingDefault() {
-		assertEquals("Expecting constructed Url.", "http://stage.dougnoel.com/", Configuration.url("DefaultUrls"));
+		PageManager.setPage("DefaultUrls");
+		assertEquals("Expecting constructed Url.", "http://stage.dougnoel.com/", Configuration.getURL(TestManager.getActiveTestObject()));
 	}
 	
 	@Test
 	public void loadStageUrlUsingBase() {
-		assertEquals("Expecting constructed Url.", "http://stage.dougnoel.com/", Configuration.url("BaseUrl"));
+		PageManager.setPage("BaseUrl");
+		assertEquals("Expecting constructed Url.", "http://stage.dougnoel.com/", Configuration.getURL(TestManager.getActiveTestObject()));
 	}
 	
-	@Test(expected = YAMLFileException.class)
+	@Test
+	public void loadProdUrl() {
+		Configuration.update(ENV, PROD);
+		PageManager.setPage("DefaultUrls");
+		assertEquals("Expecting loaded Url.", "http://dougnoel.com/", Configuration.getURL(TestManager.getActiveTestObject()));
+	}
+	
+	@Test(expected = FileException.class)
 	public void failToLoadDefaultUrl() {
-		Configuration.url("NoDefaultUrl");
+		PageManager.setPage("NoDefaultUrl");
+		Configuration.getURL(TestManager.getActiveTestObject());
 	}
 	
-	@Test(expected = YAMLFileException.class)
+	@Test(expected = FileException.class)
 	public void failToLoadPageWhenFindingUrl() {
-		Configuration.url("FakePageObject");
+		PageManager.setPage("FakePageObject");
+		Configuration.getURL(TestManager.getActiveTestObject());
 	}
 
 	@Test
@@ -156,5 +198,68 @@ public class ConfigurationTests {
 		System.setProperty("os.name", "redhat");
 		assertEquals("Expecting os to be detected as redhat.", "redhat", Configuration.detectOperatingSystem());
 		System.setProperty("os.name", realOS);
+	}
+	
+	@Test
+	public void ToBooleanReturnsFalseTwice() {
+		Configuration.update(TEST_VALUE, "false");
+		Configuration.toBoolean(TEST_VALUE);
+		assertFalse("Expecting test value to be stored as false after the first check and returned as such.", Configuration.toBoolean(TEST_VALUE));
+		Configuration.clear(TEST_VALUE);
+	}
+	
+	@Test
+	public void TestHasExecutables() {
+		Configuration.update(TEST_VALUE, "false");
+		Configuration.toBoolean(TEST_VALUE);
+		assertFalse("Expecting test value to be stored as false after the first check and returned as such.", Configuration.toBoolean(TEST_VALUE));
+		Configuration.clear(TEST_VALUE);
+	}
+	
+	@Test(expected = FileException.class)
+	public void failToLoadNonExistentExecutable() {
+		Configuration.executable("TextboxPage");
+	}
+
+	@Test
+	public void clearConfiguration(){
+		Configuration.update(TEST_VALUE, "true");
+		Configuration.clearAllSessionAppProps();
+		assertFalse("Expecting test value to default to false due to being cleared out.", Configuration.toBoolean(TEST_VALUE));
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeTimeout(){
+		System.setProperty(TIMEOUT, "3");
+		Time.reset();
+		Configuration.clearAllSessionAppProps();
+		assertEquals("Expecting timeout to still be 3 after all config values cleared.", 3, Time.out().toSeconds());
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeEnvironment(){
+		Configuration.clear(ENV);
+		System.setProperty(ENV, TEST_VALUE);
+		Configuration.clearAllSessionAppProps();
+		assertEquals(SentinelStringUtils.format("Expecting {} to still be {} after all config values cleared.", ENV, TEST_VALUE), TEST_VALUE, Configuration.environment());
+		Configuration.clear(ENV);
+		System.clearProperty(ENV);
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeDataFromConfigFile() throws IOException {
+		// - if this test fails for you, it might be because the java version you are using is unable to read the config file (java versions past jdk11).
+		//   try adding --add-opens=java.base/java.io=ALL-UNNAMED to your java VM options.
+
+		// - test_value will keep its value from before all config values cleared due to /conf/sentinel.yml file containing 'test_value: 1234' for default env.
+		Files.writeString(CONFIG_FILE_PATH,
+				"---\n" +
+						"configurations:\n" +
+						"  default:\n" +
+						"    test_value: 1234\n" +
+						"...");
+		Configuration.clearAllSessionAppProps();
+		assertEquals(SentinelStringUtils.format("Expecting {} to still be set after all config values cleared.", TEST_VALUE),
+				"1234", Configuration.toString(TEST_VALUE));
 	}
 }
